NEXT-1195 - Implement delete snippets

--- a/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
@@ -48,7 +48,7 @@
                                  :sortDirection="sortDirection"
                                  :sidebar="true"
                                  :isFullpage="true"
-                                 :selectable="false"
+                                 :selectable="true"
                                  @edit="onEdit"
                                  @sort-column="onSortColumn"
                                  @inline-edit-cancel="onInlineEditCancel"
