NTR - Fixed pagination background-color

--- a/Resources/administration/src/app/component/grid/sw-pagination/sw-pagination.less
+++ b/Resources/administration/src/app/component/grid/sw-pagination/sw-pagination.less
@@ -1,6 +1,6 @@
 @import "~less/variables";
 
-@sw-pagination-color-background:        @color-link-water;
+@sw-pagination-color-background:        @color-white;
 @sw-pagination-controls-color-border:   @color-steam-cloud;
 @sw-pagination-controls-color-hover:    @color-shopware-blue;
 @sw-pagination-controls-color-text:     @color-gutenberg;
