--- a/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
@@ -10,6 +10,7 @@
                     :defaultFolder="product.entityName"
                     @sw-media-upload-media-upload-success="successfulUpload"
                     @sw-media-upload-new-uploads-added="onUploadsAdded"
+                    @sw-media-upload-media-upload-failure="onUploadFailed"
                     @sw-media-upload-open-sidebar="onMediaUploadButtonOpenSidebar">
             </sw-media-upload>
         {% endblock %}
