NTR - Add pointer to sw-field select

--- a/Resources/administration/src/app/component/form/sw-field/sw-field.less
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.less
@@ -219,6 +219,7 @@
         }
 
         select {
+            cursor: pointer;
             display: block;
             width: 100%;
             padding: 8px 16px;
