NEXT-1474 - Condition error handling

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-customer-number/sw-condition-billing-customer-number.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-customer-number/sw-condition-billing-customer-number.html.twig
@@ -13,6 +13,7 @@
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-tagged-field class="field field--multi field--main"
+                         name="numbers"
                          v-model="condition.value.numbers">
         </sw-tagged-field>
     {% endblock %}
