--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-last-name/sw-condition-last-name.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-last-name/sw-condition-last-name.html.twig
@@ -13,6 +13,7 @@
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-field class="field field--main"
+                  name="lastName"
                   v-model="condition.value.lastName">
         </sw-field>
     {% endblock %}
