--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item/sw-condition-line-item.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item/sw-condition-line-item.html.twig
@@ -13,6 +13,7 @@
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-condition-value multi
+                            name="identifiers"
                             :id="condition.id"
                             :store="getProductStore()"
                             class="field field--main field--multi"
