--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-country/sw-condition-billing-country.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-country/sw-condition-billing-country.html.twig
@@ -14,6 +14,7 @@
     {% block sw_condition_fields_value %}
         <sw-condition-value multi
                             :id="condition.id"
+                            name="countryIds"
                             :store="getCountryStore()"
                             class="field field--main field--multi"
                             v-model="condition.value.countryIds">
