--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-street/sw-condition-billing-street.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-street/sw-condition-billing-street.html.twig
@@ -13,6 +13,7 @@
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-field class="field field--main"
+                  name="streetName"
                   v-model="condition.value.streetName">
         </sw-field>
     {% endblock %}
