--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-cart-amount/sw-condition-cart-amount.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-cart-amount/sw-condition-cart-amount.html.twig
@@ -13,6 +13,7 @@
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-field type="number"
+                  name="amount"
                   step="0.01"
                   class="field field--main"
                   v-model="condition.value.amount">
