--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-currency/sw-condition-currency.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-currency/sw-condition-currency.html.twig
@@ -14,6 +14,7 @@
     {% block sw_condition_fields_value %}
         <sw-condition-value :id="condition.id"
                             multi
+                            name="currencyIds"
                             :store="getCurrencyStore()"
                             class="field field--main field--multi"
                             v-model="condition.value.currencyIds">
