--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-customer-group/sw-condition-customer-group.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-customer-group/sw-condition-customer-group.html.twig
@@ -13,6 +13,7 @@
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-condition-value multi
+                            name="customerGroupIds"
                             :id="condition.id"
                             :store="getCustomerGroupStore()"
                             class="field field--main field--multi"
