--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-goods-count/sw-condition-goods-count.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-goods-count/sw-condition-goods-count.html.twig
@@ -13,6 +13,7 @@
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-field type="number"
+                  name="count"
                   step="1"
                   class="field field--main"
                   v-model="condition.value.count">
