--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-of-type/sw-condition-line-item-of-type.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-of-type/sw-condition-line-item-of-type.html.twig
@@ -13,7 +13,7 @@
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-field type="select"
-                  :name="lineItemType"
+                  name="lineItemType"
                   v-model="condition.value.lineItemType"
                   class="field field--main field--select">
             <template slot="options">
