--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-sales-channel/sw-condition-sales-channel.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-sales-channel/sw-condition-sales-channel.html.twig
@@ -13,6 +13,7 @@
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-condition-value multi
+                            name="salesChannelIds"
                             :id="condition.id"
                             :store="getSalesChannelStore()"
                             class="field field--multi field--main"
