--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-country/sw-condition-shipping-country.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-country/sw-condition-shipping-country.html.twig
@@ -13,6 +13,7 @@
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-condition-value multi
+                            name="countryIds"
                             :id="condition.id"
                             :store="getCountryStore()"
                             class="field field--main field--multi"
