--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-zip-code/sw-condition-shipping-zip-code.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-zip-code/sw-condition-shipping-zip-code.html.twig
@@ -13,6 +13,7 @@
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-tagged-field class="field field--main field--multi"
+                         name="zipCodes"
                          v-model="condition.value.zipCodes">
         </sw-tagged-field>
     {% endblock %}
