NTR - Add min-height to smart-bar to fix if actions-slot is empty

--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.less
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.less
@@ -63,6 +63,7 @@
     }
 
     .smart-bar__content {
+        min-height: 70px;
         max-width: 800px;
         padding: 15px 0;
         display: flex;
