--- a/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.less
+++ b/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.less
@@ -37,4 +37,10 @@
     .sw-sales-channel-detail-base__button-delete {
         text-align: center;
     }
+
+    .sw-sales-channel-detail-base__domain-container {
+        border: 1px solid @color-steam-cloud;
+        padding: 20px;
+        margin-bottom: 40px;
+    }
 }
