NTR - Change sw-sidebar-navigation-item hover state

--- a/Resources/administration/src/app/component/sidebar/sw-sidebar-navigation-item/sw-sidebar-navigation-item.less
+++ b/Resources/administration/src/app/component/sidebar/sw-sidebar-navigation-item/sw-sidebar-navigation-item.less
@@ -15,8 +15,8 @@
     cursor: pointer;
     outline: none;
 
-    &:hover {
-        background: @sw-sidebar-navigation-item-hover-color-background;
+    &:hover:not(.is--disabled) {
+        color: @sw-sidebar-navigation-item-icon-color-active;
     }
 
     &.is--active {
