NTR - Change smart-bar-back icon size

--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
@@ -26,8 +26,8 @@
                                                      class="smart-bar__back-btn"
                                                      :to="{ name: parentRoute }"
                                                      :style="{ 'color': pageColor }">
-                                            <sw-icon name="small-arrow-large-left" size="16"></sw-icon>
-                                            <sw-icon :name="module.icon" v-if="module && module.icon"></sw-icon>
+                                            <sw-icon name="default-arrow-head-left" small></sw-icon>
+                                            <sw-icon :name="module.icon" v-if="module && module.icon" small></sw-icon>
                                         </router-link>
                                     {% endblock %}
                                 </slot>
