--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.less
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.less
@@ -5,4 +5,8 @@
         color: rgba(0, 0, 0, 0.3);
         user-select: none;
     }
+
+    .sidebar__custom-snippet-switch {
+        padding: 0 25px;
+    }
 }
