--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.html.twig
@@ -10,7 +10,8 @@
                     {% block sw_media_quickinfo_multiple_quickactions_content %}
                         <ul class="sw-media-quickinfo-multiple__collapse-content sw-media-quickinfo-multiple__two-columns">
                             {% block sw_media_quickinfo_multiple_quickactions_move %}
-                                <li class="sw-media-quickinfo-multiple__quickaction quickaction--move"
+                                <li v-if="next1207"
+                                    class="sw-media-quickinfo-multiple__quickaction quickaction--move"
                                     @click="emitOpenFolderMove">
                                     <sw-icon small
                                              name="default-action-move-file"
