--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -42,6 +42,18 @@
                                     </li>
                                 {% endblock %}
 
+                                {% block sw_media_quickinfo_quickactions_move %}
+                                    <li v-if="next1207"
+                                        class="sw-media-quickinfo__quickaction quickaction--move"
+                                        @click="emitOpenFolderMove">
+                                        <sw-icon small
+                                                 name="default-action-move-file"
+                                                 class="sw-media-quickinfo__quickactions-icon">
+                                        </sw-icon>
+                                        {{ $tc('sw-media.sidebar.actions.move') }}
+                                    </li>
+                                {% endblock %}
+
                                 {% block sw_media_quickinfo_quickactions_delete %}
                                     <li class="sw-media-quickinfo__quickaction is--danger quickaction--delete"
                                          @click="emitOpenModalDelete">
